test/must_fail/api/must_fail_dir_bad_path.ngjs
#!/usr/bin/env ngspicejs
// asdf dir does not exists
// linter: ngspicejs-lint
"use strict";

dir("asdf");
